--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <!-- 
 	Hosting pages from github.io: https://pages.github.com/
+	Configuring your repository: https://help.github.com/articles/configuring-a-publishing-source-for-github-pages/
 	
 	This is a Twitter Bootstrap 3.3.7 Quick Start.  
 	
