--- a/index.html
+++ b/index.html
@@ -1,23 +1,4 @@
 <!DOCTYPE html>
-
-<!-- 
-	Hosting pages from github.io: https://pages.github.com/
-	Configuring your repository: https://help.github.com/articles/configuring-a-publishing-source-for-github-pages/
-	
-	This is a Twitter Bootstrap 3.3.7 Quick Start.  
-	
-	Getting Started:  https://getbootstrap.com/docs/3.3/getting-started/ 
-	CSS:              https://getbootstrap.com/docs/3.3/css/
-	Components:       https://getbootstrap.com/docs/3.3/components/
-	Javascript:       https://getbootstrap.com/docs/3.3/javascript/
-	
-	It is important to use a scafolding and best practices like bootstrap.  One benefit is that this baselines your html to ensure the 
-	site looks good on all browsers since all browsers have different default setting for padding and other parameters. A great place
-	to find well developed bootstrap themes id http://wrapbootstrap.com since they use best practices in extending "not customizing". 
-	This scafolding makes responsive web development much easier and is used on a large percent of modern websites. This also uses 
-	jquery, jquery is a javascript library that provides many functions to make writing javascript easier.
--->
-
 <html lang="en">
 	
 	<head>
@@ -39,9 +20,14 @@
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
+	
 	<body>
 	
-	
+		
+		
+		
+		<!-- NAVBAR
+		================================================== -->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
@@ -63,8 +49,8 @@
 			</div>
 		</nav>
 		
-		
-		<!-- Main jumbotron for a primary marketing message or call to action -->
+		<!-- JUMBOTRON [Main jumbotron for a primary marketing message or call to action]
+		================================================== -->
 		<div class="jumbotron">
 			<div class="container">
 				<h1>Hello, world!</h1>
@@ -73,7 +59,8 @@
 			</div>
 		</div>
 		
-		
+		<!-- THREE COLUMN ROW 
+		================================================== -->
 		<div class="container">
 			<!-- Example row of columns -->
 			<div class="row">
@@ -94,17 +81,25 @@
 					<img src="images/Recycle-Free-Download-PNG.png" class="img-responsive" />
 				</div>
 			</div>
+		</div>
+		
+		<!-- FOOTER
+		================================================== -->
+		<div class="container">
 			<hr>
 			<footer>
 				<p>&copy; 2016 Company, Inc.</p>
 			</footer>
 		</div>
-		<!-- /container -->
+
 		
 	
+		
+		
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		
 	</body>
 </html>
