--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 		
 		<!-- Bootstrap -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		
+		<style>
+			body {
+			  background-color: darkblue;
+			}
+
+			h1 {
+			  color: white;
+			  text-align: center;
+			}
+
+			p {
+			  font-family: verdana;
+			  font-size: 20px;
+			  color: white 
+			}
+		</style>
+		
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
