--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 		
 		<style>
 
-			.gamesrow {
-			  background-color: darkblue;
-			  font-family: verdana;
-			  font-size: 20px;
-			  color: white 
+			.gamesrow p {
+				font-family: verdana;
+				font-size: 20px;
+				color: white 
+			}
+			.bgblue {
+				background-color: darkblue;
 			}
 		</style>
 		
@@ -48,7 +50,7 @@
 		
 		<!-- THREE COLUMN ROW 
 		================================================== -->
-		<div class="container">
+		<div class="container bgblue">
 			<!-- Example row of columns -->
 			<div class="row gamesrow">
 				<div class="col-md-4">
