--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 				font-size: 20px;
 				color: white 
 			}
+			.gamesrow h2 {
+				color:#ccc;
+			}
 			body {
 				background-color: darkblue;
 			}
