--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			.gamesrow p {
 				font-family: verdana;
-				font-size: 20px;
+				font-size: 1em;
 				color: white 
 			}
 			.gamesrow h2 {
