--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 		
-		<!-- THREE COLUMN ROW 
+		<!-- one COLUMN ROW 
 		================================================== -->
 		<div class="container bgblue">
 			<!-- Example row of columns -->
