--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
 		<div class="container bgblue">
 			<!-- Example row of columns -->
 			<div class="row gamesrow">
-				<div class="col-md-12">
+				<div class="col-md-6">
 					<h2>Ocean Trash</h2>
 					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-md-6">
+					<h2>Save the Puppy</h2>
+					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" frameborder="0" allowfullscreen></iframe>
+
 				</div>
 			</div>
 		</div>
