--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
 
 				</div>
 			</div>
+			<div class="row gamesrow">
+				<div class="col-md-6">
+					<h2>Pacman</h2>
+					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/270382885/?autostart=false" frameborder="0" allowfullscreen></iframe>		,
+				</div>
+				<div class="col-md-6">
+					
+
+				</div>
+			</div>
+			
 		</div>
 		
 		<!-- FOOTER
