--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="images/favicon.ico">
 
-		<title>Bootstrap 101 Template</title>
+		<title>The Trash Games</title>
 		
 		<!-- Bootstrap -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -45,9 +45,8 @@
 		================================================== -->
 		<div class="jumbotron">
 			<div class="container">
-				<h1>Hello, world!</h1>
-				<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-				<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+				<h1>The Trash Games</h1>
+				<p>These games have been created by childen. Have fun!</p>
 			</div>
 		</div>
 		
