--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		================================================== -->
 		<div class="jumbotron">
 			<div class="container">
-				<h1>The Trash Games</h1>
-				<p>These games have been created by childen. Have fun!</p>
+				<h1>Don't Be Trashy</h1>
+				<p>Have Fun and keep the earth clean</p>
 			</div>
 		</div>
 		
