--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 			<!-- Example row of columns -->
 			<div class="row gamesrow">
 				<div class="col-md-12">
-					<h2>Ocean Trash</h2>
-					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" frameborder="0" allowfullscreen></iframe>
+					<div class="embed-responsive">
+						<h2>Ocean Trash</h2>
+						<iframe allowtransparency="true" width="100%" height="600" src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" frameborder="0" allowfullscreen></iframe>
+					</div>
 				</div>
 				<div class="col-md-12">
 					<h2>Save the Puppy</h2>
