--- a/index.html
+++ b/index.html
@@ -50,12 +50,20 @@
 			</div>
 		</div>
 		
-		<!-- one COLUMN ROW 
+		
+		
+		
+		
+		
+		
+		
+		
+		<!-- Game page content
 		================================================== -->
 		<div class="container bgblue">
 			
 			
-			<!-- Example row of columns -->
+			<!-- ROW 1-->
 			<div class="row gamesrow">
 				<div class="col-md-12">
 					<div class="embed-responsive">
@@ -63,11 +71,19 @@
 						<iframe allowtransparency="true" width="100%" height="600" src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
+			</div>
+			
+			<!-- ROW 2-->
+			<div class="row gamesrow">
 				<div class="col-md-12">
 					<h2>Save the Puppy</h2>
 					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" frameborder="0" allowfullscreen></iframe>
 
 				</div>
+			</div>
+			
+			<!-- ROW 3-->
+			<div class="row gamesrow">
 				<div class="col-md-12">
 					<h2>Pacman</h2>
 					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/270382885/?autostart=false" frameborder="0" allowfullscreen></iframe>		,
@@ -76,17 +92,10 @@
 
 		</div>
 		
-		<!-- FOOTER
-		================================================== -->
-		<div class="container">
-			<hr>
-			<footer>
-				<p>&copy; 2016 Company, Inc.</p>
-			</footer>
-		</div>
 
 		
-	
+		
+		
 		
 		
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
