--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="col-md-12">
 					<div class="embed-responsive">
 						<h2>Ocean Trash</h2>
-						<iframe allowtransparency="true" width="100%" height="600" src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" frameborder="0" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" allowtransparency="true" width="100%" height="600" src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -77,7 +77,7 @@
 			<div class="row gamesrow">
 				<div class="col-md-12">
 					<h2>Save the Puppy</h2>
-					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" frameborder="0" allowfullscreen></iframe>
+					<iframe class="embed-responsive-item" allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" frameborder="0" allowfullscreen></iframe>
 
 				</div>
 			</div>
@@ -86,7 +86,7 @@
 			<div class="row gamesrow">
 				<div class="col-md-12">
 					<h2>Pacman</h2>
-					<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/270382885/?autostart=false" frameborder="0" allowfullscreen></iframe>		,
+					<iframe class="embed-responsive-item" allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/270382885/?autostart=false" frameborder="0" allowfullscreen></iframe>		,
 				</div>
 			</div>
 
