--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			<!-- ROW 1-->
 			<div class="row gamesrow">
 				<div class="col-md-12">
+					<h2>Ocean Trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
-						<h2>Ocean Trash</h2>
 						<iframe 
 							class="embed-responsive-item" 
 							allowtransparency="true" 
@@ -84,24 +84,35 @@
 			<div class="row gamesrow">
 				<div class="col-md-12">
 					<h2>Save the Puppy</h2>
-					<iframe 
-						class="embed-responsive-item" 
-						allowtransparency="true" 
-						width="485" 
-						height="402" 
-						src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" 
-						frameborder="0" 
-						allowfullscreen>
-					</iframe>
-
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe 
+							class="embed-responsive-item" 
+							allowtransparency="true" 
+							width="485" 
+							height="402" 
+							src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" 
+							frameborder="0" 
+							allowfullscreen>
+						</iframe>
+					</div>
 				</div>
 			</div>
 			
 			<!-- ROW 3-->
 			<div class="row gamesrow">
 				<div class="col-md-12">
-					<h2>Pacman</h2>
-					<iframe class="embed-responsive-item" allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/270382885/?autostart=false" frameborder="0" allowfullscreen></iframe>		,
+					<h2>Trash-Man</h2>
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe 
+							class="embed-responsive-item" 
+							allowtransparency="true" 
+							width="485" 
+							height="402" 
+							src="//scratch.mit.edu/projects/embed/270382885/?autostart=false" 
+							frameborder="0" 
+							allowfullscreen>
+						</iframe>
+					</div>
 				</div>
 			</div>
 
