--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		
 		<style>
-
 			.gamesrow p {
-				font-family: verdana;
 				font-size: 1em;
 				color: white 
 			}
 			.gamesrow h2 {
 				color:#ccc;
-				bottom-margin:25px
+				margin-BOTTOM:25px;
 			}
 			body {
 				background-color: darkblue;
