--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		
 		<style>
+			/* Custom Stylesheet Properties */
 			.gamesrow p {
 				font-size: 1em;
 				color: white 
@@ -57,12 +58,12 @@
 		
 		
 		
-		<!-- Game page content
+		<!-- GAME PAGE BODY CONTENT
 		================================================== -->
 		<div class="container bgblue">
 			
 			
-			<!-- ROW 1-->
+			<!-- BEGIN ROW 1-->
 			<div class="row gamesrow">
 				<div class="col-md-12">
 					<h2>Ocean Trash</h2>
@@ -77,6 +78,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- END ROW 1-->
 			
 			<!-- ROW 2-->
 			<div class="row gamesrow">
@@ -94,8 +96,9 @@
 					</div>
 				</div>
 			</div>
+			<!-- END ROW 2-->
 			
-			<!-- ROW 3-->
+			<!-- BEGIN ROW 3-->
 			<div class="row gamesrow">
 				<div class="col-md-12">
 					<h2>Trash-Man</h2>
@@ -111,6 +114,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- END ROW 3-->
 
 		</div>
 		
