--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 				color:#ccc;
 				margin-BOTTOM:25px;
 			}
+			.gamesrow iframe {
+				margin: auto 25px;
+			}
 			body {
 				background-color: darkblue;
 			}
@@ -71,7 +74,7 @@
 						<iframe 
 							class="embed-responsive-item" 
 							allowtransparency="true" 
-							width="90%" 
+							width="100%" 
 							src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" 
 							frameborder="0" allowfullscreen>
 						</iframe>
@@ -88,7 +91,7 @@
 						<iframe 
 							class="embed-responsive-item" 
 							allowtransparency="true" 
-							width="90%" 
+							width="100%" 
 							src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" 
 							frameborder="0" 
 							allowfullscreen>
@@ -100,13 +103,13 @@
 			
 			<!-- BEGIN ROW 3-->
 			<div class="row gamesrow">
-				<div class="col-md-12">
+				<div class="colcol-md-12">
 					<h2>Trash-Man</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
 							allowtransparency="true" 
-							width="90%" 
+							width="100%" 
 							src="//scratch.mit.edu/projects/embed/270382885/?autostart=false" 
 							frameborder="0" 
 							allowfullscreen>
