--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				margin-BOTTOM:25px;
 			}
 			.gamesrow iframe {
-				margin: auto 40px;
+				padding: auto 40px;
 			}
 			body {
 				background-color: darkblue;
