--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 				margin-BOTTOM:25px;
 			}
 			.gamesrow iframe {
-				padding: auto 40px;
+				padding: auto 60px;
+				background-color:red;
 			}
 			body {
 				background-color: darkblue;
