--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				margin-BOTTOM:25px;
 			}
 			.gamesrow iframe {
-				padding: auto 60px;
-				background-color:red;
+				padding: auto 100px;
+				background-color: darkblue;
 			}
 			body {
 				background-color: darkblue;
