--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		
 		<style>
 			/* Custom Stylesheet Properties */
+			.gamesrow {
+				margin-bottom:50px
+			}
+			.ga
 			.gamesrow p {
 				font-size: 1em;
 				color: white 
