--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
 			.gamesrow {
 				margin-bottom:50px
 			}
-			.ga
 			.gamesrow p {
-				font-size: 1em;
-				color: white 
+				color: white;
 			}
 			.gamesrow h2 {
-				color:#ccc;
-				margin-BOTTOM:25px;
+				color: lightgrey;
+				margin-bottom:10px;
 			}
 			.gamesrow iframe {
 				padding: auto 100px;
-				background-color: darkblue;
+				background-color: lightgrey;
 			}
 			body {
 				background-color: darkblue;
