--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			
 			<!-- BEGIN ROW 1-->
 			<div class="row gamesrow">
-				<div class="col-md-12">
+				<div class="col-md-10 col-md-offset-2">
 					<h2>Ocean Trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
@@ -88,7 +88,7 @@
 			
 			<!-- ROW 2-->
 			<div class="row gamesrow">
-				<div class="col-md-12">
+				<div class="col-md-10 col-md-offset-2">
 					<h2>Save the Puppy</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
@@ -106,7 +106,7 @@
 			
 			<!-- BEGIN ROW 3-->
 			<div class="row gamesrow">
-				<div class="colcol-md-12">
+				<div class="colcol-md-10 col-md-offset-2">
 					<h2>Trash-Man</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
