--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			
 			<!-- BEGIN ROW 1-->
 			<div class="row gamesrow">
-				<div class="col-md-10 col-md-offset-2">
+				<div class="col-md-10 col-md-offset-1">
 					<h2>Ocean Trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
@@ -83,12 +83,13 @@
 						</iframe>
 					</div>
 				</div>
+				<div class="col-md-1"></div>
 			</div>
 			<!-- END ROW 1-->
 			
 			<!-- ROW 2-->
 			<div class="row gamesrow">
-				<div class="col-md-10 col-md-offset-2">
+				<div class="col-md-10 col-md-offset-1">
 					<h2>Save the Puppy</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
@@ -101,12 +102,13 @@
 						</iframe>
 					</div>
 				</div>
+				<div class="col-md-1"></div>
 			</div>
 			<!-- END ROW 2-->
 			
 			<!-- BEGIN ROW 3-->
 			<div class="row gamesrow">
-				<div class="colcol-md-10 col-md-offset-2">
+				<div class="colcol-md-10 col-md-offset-1">
 					<h2>Trash-Man</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
@@ -119,6 +121,7 @@
 						</iframe>
 					</div>
 				</div>
+				<div class="col-md-1"></div>
 			</div>
 			<!-- END ROW 3-->
 
