--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 			
 			<!-- BEGIN ROW 3-->
 			<div class="row gamesrow">
-				<div class="colcol-md-10 col-md-offset-1">
-					<h2>Trash-Man</h2>
+				<div class="col-md-10 col-md-offset-1">
+					<h2>Save the Puppy</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
