--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<!-- BEGIN ROW 3-->
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
-					<h2>Save the Puppy</h2>
+					<h2>Trash-Man</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
