--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 				padding: auto 100px;
 				background-color: lightgrey;
 			}
+			.jumbotron {
+				background-image: url("/images/43090033_2153013458063878_3903533807822700544_o.jpg");
+				background-size: cover;
+			}
 			body {
 				background-color: darkblue;
 			}
