--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				background-color: lightgrey;
 			}
 			.jumbotron {
-				background-image: url("/images/oscar.jpg");
+				background-image: url("images/oscar.jpg");
 				background-size: cover;
 			}
 			body {
