--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 				background-color: lightgrey;
 			}
 			.jumbotron {
-				background-image: url("images/oscar.jpg");
-				background-size: cover;
+				   background: url('images/oscar.jpg') no-repeat center center fixed;
+				   -webkit-background-size: cover;
+				   -moz-background-size: cover;
+				   background-size: cover;
+				   -o-background-size: cover;
 			}
 			body {
 				background-color: darkblue;
