--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				background-color: lightgrey;
 			}
 			.jumbotron {
-				   background: url('images/oscar.jpg') no-repeat center center fixed;
+				   background: url('images/oscar1.jpg') no-repeat center center fixed;
 				   -webkit-background-size: cover;
 				   -moz-background-size: cover;
 				   background-size: cover;
