--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
 				background-color: lightgrey;
 			}
 			.jumbotron {
-				   background: url('images/oscar1.jpg') no-repeat center center fixed;
-				   -webkit-background-size: cover;
-				   -moz-background-size: cover;
-				   background-size: cover;
-				   -o-background-size: cover;
+				background: url('images/oscar1.jpg') no-repeat center center fixed;
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+				background-position: right top;
 			}
 			body {
 				background-color: darkblue;
