--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-position: right top;
+				background-color: lightgrey;
 			}
 			body {
 				background-color: darkblue;
