--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<!-- JUMBOTRON [Main jumbotron for a primary marketing message or call to action]
 		================================================== -->
 		<div class="jumbotron">
-			<div class="container">
+			<div class="container text-center">
 				<h1>Don't Be Trashy</h1>
 				<p>Have Fun and keep the earth clean</p>
 			</div>
