--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<!-- BEGIN ROW 1-->
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
-					<h2>Ocean Trash</h2>
+					<h2>can the trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
