--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 			<div class="container text-center">
 				<h1>Don't Be Trashy</h1>
 				<p>Have Fun and keep the earth clean</p>
+				<p style="text-decoration:underline;">This text has been underlined</p>
+
 			</div>
 		</div>
 		
