--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 		<div class="jumbotron">
 			<div class="container text-center">
 				<h1>Don't Be Trashy</h1>
+				<h1>style<"text-decoration:underline;">This text has been underlined</p>
 				<p>Have Fun and keep the earth clean</p>
-				<p style="text-decoration:underline;">This text has been underlined</p>
+				
 
 			</div>
 		</div>
