--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		================================================== -->
 		<div class="jumbotron">
 			<div class="container text-center">
-				<h1>Don't Be Trashy</h1><p style="text-decoration:underline;">This text has been underlined</p>
+				<h1>Don't Be Trashy</h1>
 				<p>Have Fun and keep the earth clean</p>
 				
 
