--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<link rel="icon" href="images/favicon.ico">
-		<title>The Trash Games</title>
+		<title><p style="Don't be trashy">This text has been underlined</p>
+
 		
 		<!-- Bootstrap -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
