--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<link rel="icon" href="images/favicon.ico">
-		<title><p style="Don't be trashy">This text has been underlined</p>
-
+		<title>Dont be trashy>
 		
 		<!-- Bootstrap -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
