--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<link rel="icon" href="images/favicon.ico">
-		<title>Dont be trashy>
+		<h1>Dont be trashy</h1>
 		
 		<!-- Bootstrap -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
