--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<!-- ROW 2-->
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
-					<h2>Trashey flashy</h2>
+					<h2>Flashy trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
