--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="jumbotron">
 			<div class="container text-center">
 				<h1>Don't Be Trashy</h1>
-				<p>Have Fun and keep the earth clean</p>
+				<p>By: Chole Beers, Rhoen Nevens, Jax Wisenbaker, Lucy Silver-Lord, and Anelise Soderberg</p>
 				
 
 			</div>
@@ -75,6 +75,7 @@
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
 					<h2>The trash attack</h2>
+					<p>description </p>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
