--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 				<div class="col-md-10 col-md-offset-1">
 					<h2>Flashy trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
+						<p>description </p>
 						<iframe 
 							class="embed-responsive-item" 
 							allowtransparency="true" 
