--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="jumbotron">
 			<div class="container text-center">
 				<h1>Don't Be Trashy</h1>
-				<p>By: Chole Beers, Rhoen Nevens, Jax Wisenbaker, Lucy Silver-Lord, and Anelise Soderberg</p>
+				<p>Created Chole Beers, Rhoen Nevens, Jax Wisenbaker, Lucy Silver-Lord, and Anelise Soderberg</p>
 				
 
 			</div>
@@ -95,12 +95,12 @@
 				<div class="col-md-10 col-md-offset-1">
 					<h2>Flashy trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
-						<p>description </p>
 						<iframe 
 							class="embed-responsive-item" 
 							allowtransparency="true" 
 							width="100%" 
 							src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" 
+							<p>description </p>
 							frameborder="0" 
 							allowfullscreen>
 						</iframe>
