--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
 					<h2>The trash attack</h2>
+					<p>description </p>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
@@ -82,7 +83,6 @@
 							width="100%" 
 							src="//scratch.mit.edu/projects/embed/269911413/?autostart=false" 
 							frameborder="0" allowfullscreen>
-							<p>description </p>
 						</iframe>
 					</div>
 				</div>
@@ -102,6 +102,7 @@
 							src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" 
 							frameborder="0" 
 							allowfullscreen>
+							<h2>Flashy trash</h2>
 						</iframe>
 					</div>
 				</div>
