--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 							src="//scratch.mit.edu/projects/embed/269959732/?autostart=false" 
 							frameborder="0" 
 							allowfullscreen>
-							<h2>Flashy trash</h2>
 						</iframe>
 					</div>
+					<p>description </p>
 				</div>
 				<div class="col-md-1"></div>
 			</div>
