--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 					<p>description </p>
 				</div>
 				<div class="col-md-1"></div>
+				<font size="14">This is some text!</font>
 			</div>
 			<!-- END ROW 1-->
 			
