--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="jumbotron">
 			<div class="container text-center">
 				<h1>Don't Be Trashy</h1>
-				<p>Created Chole Beers, Rhoen Nevens, Jax Wisenbaker, Lucy Silver-Lord, and Anelise Soderberg</p>
+				<p>Help keep your earth clean</p>
 				
 
 			</div>
@@ -74,7 +74,7 @@
 			<!-- BEGIN ROW 1-->
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
-					<h2>The trash attack</h2>
+					<h2>The Trash Attack</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
@@ -84,7 +84,10 @@
 							frameborder="0" allowfullscreen>
 						</iframe>
 					</div>
-					<p>description </p>
+					<p>Instructions:
+Use your left and right arrow keys to move the trash can back and forth in order to collect all of the falling trash. When you successfully collect a piece of trash, you will earn a point. To see how many points you have, take a look at the top left corner. But, there's a twist! If a piece of trash falls onto the ground of the ocean you will lose a point! Your goal is to stay in the positives. Good luck!
+
+ </p>
 				</div>
 				<div class="col-md-1"></div>
 			</div>
@@ -93,7 +96,7 @@
 			<!-- ROW 2-->
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
-					<h2>Flashy trash</h2>
+					<h2>Flashy Trash</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
@@ -104,7 +107,10 @@
 							allowfullscreen>
 						</iframe>
 					</div>
-					<p>description </p>
+					<p>Instructions:
+Collect the trash so the dog doesn't get harmed by it! Use our mouse or touchpad to click on the trash that appears. The trash appears and disappears quickly, so focus hard! This is a secret test to see how good your reflex skills are (JK)! Every piece of trash that you collect will earn you a point! Good luck, and use those reflexes! 
+
+ </p>
 				</div>
 				<div class="col-md-1"></div>
 			</div>
@@ -113,7 +119,7 @@
 			<!-- BEGIN ROW 3-->
 			<div class="row gamesrow">
 				<div class="col-md-10 col-md-offset-1">
-					<h2>Mission intrashable</h2>
+					<h2>Mission Intrashable</h2>
 					<div class="embed-responsive embed-responsive-4by3">
 						<iframe 
 							class="embed-responsive-item" 
@@ -124,7 +130,11 @@
 							allowfullscreen>
 						</iframe>
 					</div>
-					<p>description </p>
+					<p>
+Instructions:
+Use your arrow keys to control the trash can. Your goal is to make it through the maze, collect all of the trash on the way, and make sure to not bump into any walls! If you do end up running into the wall don't worry, all of the trash pieces that you collected previously will save! There's a little twist on this game though! You have to collect the dead fish in the top left last! So plan accordingly and get those points! Good luck! 
+
+</p>
 				</div>
 				<div class="col-md-1"></div>
 			</div>
