--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ Use your arrow keys to control the trash can. Your goal is to make it through th
 
 </p>
 				</div>
+				<p>Help keep your earth clean</p>
 				<div class="col-md-1"></div>
 			</div>
 			<!-- END ROW 3-->
